--- a/final-framework-testng/pom.xml
+++ b/final-framework-testng/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>jxl</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+		<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.1</version>
+	</dependency>
 
 
 	</dependencies>
